Tue Oct 10 23:14:33 2000  Denis Chertykov  <denisc@overta.ru>

	* config/avr/avr.c (valid_machine_decl_attribute): Allow `extern'
	declaration for data with "progmem" attribute.

2000-10-09  Marek Michalkiewicz  <marekm@linux.org.pl>

	* config/avr/avr.c (out_shift_with_cnt): Use AS2 macro.
	Correct insn length if shift count is a memory operand.
	* config/avr/avr.md: New define_peephole2 to use *reload_inqi.
	(*iorhi3_clobber): Change lo8 to hi8.
	(zero_extendhisi2): Change %B0 to %A1.
	(ashlhi3, ashrhi3): Correct insn length.
	(andhi3, abssf2, extendqisi2, extendhisi2): Change "cc"
	from "clobber" to "set_n" in some alternatives.

2000-10-10  Jakub Jelinek  <jakub@redhat.com>

	* reload1.c (calculate_needs_all_insns): If deleting an instruction,
	remove its insn_chain structure as well.

2000-10-09  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* dbxout.c (dbxout_source_line): Remove extra tab.

2000-10-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/elfos.h (UNIQUE_SECTION): Apply STRIP_NAME_ENCODING on name.

2000-10-09  Richard Henderson  <rth@cygnus.com>

	* Makefile.in (LANG_LIB2FUNCS): Remove.
	(LIB2FUNCS): Remove _pure.
	(LIB2ADD): Remove LANG_LIB2FUNCS.
	(stage_a): Don't set LANG_LIB2FUNCS.
	* libgcc2.c (__terminate): Mark noreturn.
	(__pure_virtual): Remove.
	* mklibgcc.in: Remove LIB2ADD .txt processing.

2000-10-09  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md (push_multi): Revert unintended change.

2000-10-09  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c: Miscellaneous white space and comment clean-ups.  No 
	functional change.
	* arm.md: Likewise.

2000-10-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-common.c (c_expand_builtin_printf): Set the TREE_TYPE of a new
	STRING_CST by calling combine_strings.

2000-10-09  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (thumb_expand_movstrqi): Rewrite to support SSA form.
	(thumb_output_move_mem_multiple): Support new insn format.
	* arm.md (movmem12b): Use SSA compatible format.