@@ -1,3 +1,8 @@
+Wed Oct 11 06:15:41 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* tree.c (get_narrower): Don't look at precision of field if
+	not laid out yet.
+
 Tue Oct 10 23:14:33 2000  Denis Chertykov  <denisc@overta.ru>
 
 	* config/avr/avr.c (valid_machine_decl_attribute): Allow `extern'
